create github pages

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-primary display-5" href="websites.html" aria-expanded="false">
-                            #Websites</a></li><li class="nav-item"><a class="nav-link link text-primary display-5" href="marketing.html" aria-expanded="false">
-                            #Marketing</a></li><li class="nav-item"><a class="nav-link link text-primary display-5" href="social.html" aria-expanded="false">
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-secondary display-5" href="websites.html" aria-expanded="false">
+                            #Websites</a></li><li class="nav-item"><a class="nav-link link text-secondary display-5" href="marketing.html" aria-expanded="false">
+                            #Marketing</a></li><li class="nav-item"><a class="nav-link link text-secondary display-5" href="social.html" aria-expanded="false">
                             #Social</a></li></ul>
                 
                 
@@ -135,12 +135,12 @@
             </div>
             <div class="col-lg-3 col-md-12 align-center">
                 <div class="wrap">
-                    <img src="assets/images/148.svg" alt="" class="image-1 animated-elements1">
-                    <img src="assets/images/249.svg" alt="" class="image-2 animated-elements2">
-                    <img src="assets/images/350.svg" alt="" class="image-3 animated-elements3">
-                    <img src="assets/images/451.svg" alt="" class="image-4 animated-elements4">
-                    <img src="assets/images/552.svg" alt="" class="image-5 animated-elements5">
-                    <img src="assets/images/653.svg" alt="" class="image-6 animated-elements6">
+                    <img src="assets/images/154.svg" alt="" class="image-1 animated-elements1">
+                    <img src="assets/images/255.svg" alt="" class="image-2 animated-elements2">
+                    <img src="assets/images/356.svg" alt="" class="image-3 animated-elements3">
+                    <img src="assets/images/457.svg" alt="" class="image-4 animated-elements4">
+                    <img src="assets/images/558.svg" alt="" class="image-5 animated-elements5">
+                    <img src="assets/images/659.svg" alt="" class="image-6 animated-elements6">
                 </div>
             </div>
         </div>
@@ -285,12 +285,12 @@
             </div>
         </div>
         <div class="wrap">
-            <img src="assets/images/148.svg" alt="" class="image-1 animated-elements1">
-            <img src="assets/images/249.svg" alt="" class="image-2 animated-elements2">
-            <img src="assets/images/350.svg" alt="" class="image-3 animated-elements3">
-            <img src="assets/images/451.svg" alt="" class="image-4 animated-elements4">
-            <img src="assets/images/552.svg" alt="" class="image-5 animated-elements5">
-            <img src="assets/images/653.svg" alt="" class="image-6 animated-elements6">
+            <img src="assets/images/154.svg" alt="" class="image-1 animated-elements1">
+            <img src="assets/images/255.svg" alt="" class="image-2 animated-elements2">
+            <img src="assets/images/356.svg" alt="" class="image-3 animated-elements3">
+            <img src="assets/images/457.svg" alt="" class="image-4 animated-elements4">
+            <img src="assets/images/558.svg" alt="" class="image-5 animated-elements5">
+            <img src="assets/images/659.svg" alt="" class="image-6 animated-elements6">
         </div>
     </div>
 </section>
@@ -317,7 +317,7 @@
                 </div>
             </div>
             <div class="col-lg-6 my-auto pb-4 mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="zkRKOkx7hByn+GtcTbutF+KuVpn5S/Z6GOhEUDfBcgjAfOgiAn1flaLhatKoerOKdunLkD4vekoSjig2NRRpWC/3HA9yU+DPTC79jiPhclgAWVCN+6GOQycVOIyO96Aw.YyDEq/iUIp9pMszkSehoNxLcns6ZB09zpgCz/QGOwGDxT1L6I0+92W+IaJLioQNfnjY3kIOo0qmX4aa1TZRwAda6mRmuJ7+uLv0wbCY4AujW1GJq+kH43ooNoO+LkSkE">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="l85ZZpJVebn1NbG8P8/+BM2TghIY4N8M5p/EXtyqzMzo1Jr4yTFmma/AbHBV/G4eG0T5hstil3y9cYMfuIYwURm+LHLGTYVRRClCkxDCPZqg0/V5B338B2LsKyiM5tKx.SORPu1f+eEV99IyfnQoXFAYFsMgW2mNEBLg86PnPozf0hwBAOqHqrDyyN73bTPp2Ig9MbTYXbonzk+R19RTRtRvm3IapyZ8pK1Xfwoqh7zYc6sQ9MhaGc0g5F9fSumJ6">
                     <div class="form-row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -355,7 +355,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="col-md-6 map1">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJPXNH22yWMioR0FXfNbXwBAM" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:ChIJPXNH22yWMioR0FXfNbXwBAM" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6 map2">
                 <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJTw5JI2wFdkgR6lLDgDYDaAI" allowfullscreen=""></iframe></div>
