--- a/marketing.html
+++ b/marketing.html
@@ -52,9 +52,9 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-primary display-5" href="websites.html" aria-expanded="false">
-                            #Websites</a></li><li class="nav-item"><a class="nav-link link text-primary display-5" href="marketing.html" aria-expanded="false">
-                            #Marketing</a></li><li class="nav-item"><a class="nav-link link text-primary display-5" href="social.html" aria-expanded="false">
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-secondary display-5" href="websites.html" aria-expanded="false">
+                            #Websites</a></li><li class="nav-item"><a class="nav-link link text-secondary display-5" href="marketing.html" aria-expanded="false">
+                            #Marketing</a></li><li class="nav-item"><a class="nav-link link text-secondary display-5" href="social.html" aria-expanded="false">
                             #Social</a></li></ul>
                 
                 
@@ -79,12 +79,12 @@
                         <a class="btn btn-sm btn-white-outline display-7" href="marketing.html#header04-k"><span class="mobi-mbri mobi-mbri-growing-chart mbr-iconfont mbr-iconfont-btn"></span>Organic <br>Marketing</a></div>
                 </div>
                 <div class="wrap">
-                    <img src="assets/images/148.svg" alt="" class="image-1 animated-elements1">
-                    <img src="assets/images/249.svg" alt="" class="image-2 animated-elements2">
-                    <img src="assets/images/350.svg" alt="" class="image-3 animated-elements3">
-                    <img src="assets/images/451.svg" alt="" class="image-4 animated-elements4">
-                    <img src="assets/images/552.svg" alt="" class="image-5 animated-elements5">
-                    <img src="assets/images/653.svg" alt="" class="image-6 animated-elements6">
+                    <img src="assets/images/154.svg" alt="" class="image-1 animated-elements1">
+                    <img src="assets/images/255.svg" alt="" class="image-2 animated-elements2">
+                    <img src="assets/images/356.svg" alt="" class="image-3 animated-elements3">
+                    <img src="assets/images/457.svg" alt="" class="image-4 animated-elements4">
+                    <img src="assets/images/558.svg" alt="" class="image-5 animated-elements5">
+                    <img src="assets/images/659.svg" alt="" class="image-6 animated-elements6">
                 </div>
             </div>
         </div>
@@ -169,16 +169,16 @@
                     </p>
                 </div>
                 <div class="wrap">
-                    <img src="assets/images/148.svg" alt="" class="image-1 animated-elements1">
-                    <img src="assets/images/249.svg" alt="" class="image-2 animated-elements2">
-                    <img src="assets/images/350.svg" alt="" class="image-3 animated-elements3">
-                    <img src="assets/images/451.svg" alt="" class="image-4 animated-elements4">
-                    <img src="assets/images/552.svg" alt="" class="image-5 animated-elements5">
-                    <img src="assets/images/653.svg" alt="" class="image-6 animated-elements6">
+                    <img src="assets/images/154.svg" alt="" class="image-1 animated-elements1">
+                    <img src="assets/images/255.svg" alt="" class="image-2 animated-elements2">
+                    <img src="assets/images/356.svg" alt="" class="image-3 animated-elements3">
+                    <img src="assets/images/457.svg" alt="" class="image-4 animated-elements4">
+                    <img src="assets/images/558.svg" alt="" class="image-5 animated-elements5">
+                    <img src="assets/images/659.svg" alt="" class="image-6 animated-elements6">
                 </div>
             </div>
             <div class="col-lg-6 my-auto pb-4 mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="aqTyNLf5pYPvB7iqS7rp3ALX30O0O7APSBbHUcRcLqu05k368Z4srCFZGfMlau3Wj9GNF+5EigoJriAcAARAbv2RjdeTNj2l+OlEAWgg5+dIgcsZaEps/asufVui5tx9.HfIocivcmEAwPGldZhEnKon7KLMc08wnerdFwPEJXzCsvp/8QPp8EU8OCCw0go5EvhiRCgsji+Py/dyRMdMPU6UGiT0+h+GsLsAnOVg3+nrjkjYbR6femJx3GCyvhiUG">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="ekxlem7ovdxlOmMZV5jG8af022LraxI5ptdJxzeIl9SoIGMLhfJUgWOZZtKE/c1QMPwzX17ecddlQan+z+orCM2Lob6MTGdvabyeV/enPh1ySScmwMUYYmtHH/Q+9tLX.48KMsasSJJlSAlFTb1Fx4gMADXjKx3/cnH9evK3vNtkqSHyP9pehu+PJL1RB52+ZpSz206kv+y23dPj2GQRLzj5zv75g01W2HaGf5eWbsKXPbiQlsxqnhaZGKl/anBEd">
                     <div class="form-row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
