create github pages

--- a/websites.html
+++ b/websites.html
@@ -78,12 +78,12 @@
                     
                 </div>
                 <div class="wrap">
-                    <img src="assets/images/154.svg" alt="" class="image-1 animated-elements1">
-                    <img src="assets/images/255.svg" alt="" class="image-2 animated-elements2">
-                    <img src="assets/images/356.svg" alt="" class="image-3 animated-elements3">
-                    <img src="assets/images/457.svg" alt="" class="image-4 animated-elements4">
-                    <img src="assets/images/558.svg" alt="" class="image-5 animated-elements5">
-                    <img src="assets/images/659.svg" alt="" class="image-6 animated-elements6">
+                    <img src="assets/images/10.svg" alt="" class="image-1 animated-elements1">
+                    <img src="assets/images/21.svg" alt="" class="image-2 animated-elements2">
+                    <img src="assets/images/32.svg" alt="" class="image-3 animated-elements3">
+                    <img src="assets/images/43.svg" alt="" class="image-4 animated-elements4">
+                    <img src="assets/images/54.svg" alt="" class="image-5 animated-elements5">
+                    <img src="assets/images/65.svg" alt="" class="image-6 animated-elements6">
                 </div>
             </div>
         </div>
@@ -98,7 +98,7 @@
     <div class="container d-flex flex-column">
         <ul class="nav nav-tabs mb-5 d-flex justify-content-center" role="tablist">
             <li class="nav-item first mbr-section-btn"><a class="mbr-fonts-style btn show btn-md active display-4" role="tab" data-toggle="tab" href="#tabs01-f_tab0" aria-selected="true">MONTHLY</a></li>
-            <li class="nav-item mbr-section-btn"><a class="mbr-fonts-style btn btn-md active display-4" role="tab" data-toggle="tab" href="#tabs01-f_tab1" aria-selected="true">YEARLY (15% OFF)</a></li>
+            <li class="nav-item mbr-section-btn"><a class="mbr-fonts-style btn btn-md active display-4" role="tab" data-toggle="tab" href="#tabs01-f_tab1" aria-selected="true">YEARLY (20% OFF)</a></li>
         </ul>
         <div class="tab-content">
             <div id="tab1" class="tab-pane in active" role="tabpanel">
@@ -107,13 +107,13 @@
                     <div class="card col-12 col-md-8 col-lg-4">
                         <div class="card-img">
                             <h4 class="price align-right mbr-fonts-style display-1">
-                                $20</h4>
+                                $25</h4>
                             <p class="price-text align-right mbr-regular mbr-fonts-style pt-2 align-left display-4">PER MONTH</p>
                         </div>
                         <div class="card-box">
-                            <h4 class="card-title align-left mbr-regular mbr-fonts-style display-7"><strong>
-                                    Basic</strong><br>Simple visual</h4>
-                            <p class="mbr-text mbr-fonts-style align-left display-4">One Page<br>Secure Hosting<br>Links: Email, Phone<br>Social Media<br>24/7 Support<br></p>
+                            <h4 class="card-title align-left mbr-regular mbr-fonts-style display-5"><strong>
+                                    Basic</strong><br>Simple Visual</h4>
+                            <p class="mbr-text mbr-fonts-style align-left display-4">One Page<br>Secure Hosting<br>Links: Email, Phone<br>Social Media Links<br>24/7 Support<br></p>
                             <div class="align-left mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="websites.html#forms02-g">PURCHASE</a></div>
                         </div>
                     </div>
@@ -125,10 +125,8 @@
                             <p class="price-text mbr-fonts-style pt-2 align-right mbr-regular display-4">PER MONTH</p>
                         </div>
                         <div class="card-box">
-                            <h4 class="card-title align-left mbr-regular mbr-fonts-style display-7"><strong>Business</strong><br><strong> </strong>
-                                For smart
-                            </h4>
-                            <p class="mbr-text mbr-fonts-style align-left display-4">Template design<br>Upto 20 pages<br>Links: Email, Phone
+                            <h4 class="card-title align-left mbr-regular mbr-fonts-style display-5"><strong>Business</strong><br>Smart Digital</h4>
+                            <p class="mbr-text mbr-fonts-style align-left display-4">Template Design<br>Upto 20 pages<br>Links: Email, Phone
 <br>Social Media<br>Unlimited Bandwidth
                                 <br>24/7 Support<br></p>
                             <div class="align-left mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="websites.html#forms02-g">PURCHASE</a></div>
@@ -138,12 +136,12 @@
                     <div class="card col-12 col-md-8 col-lg-4">
                         <div class="card-img">
                             <h4 class="price align-right mbr-fonts-style display-1">
-                                $500</h4>
+                                $2k</h4>
                             <p class="price-text mbr-fonts-style pt-2 align-right mbr-regular display-4">PER MONTH</p>
                         </div>
                         <div class="card-box">
-                            <h4 class="card-title align-left mbr-regular mbr-fonts-style display-7"><strong>Enterprise</strong><br>Your best choice</h4>
-                            <p class="mbr-text mbr-fonts-style align-left display-4">Custom Template<br>Common Integrations<br>eCommence<br>Unlimited Bandwidth
+                            <h4 class="card-title align-left mbr-regular mbr-fonts-style display-5"><strong>Enterprise</strong><br>Global Grade</h4>
+                            <p class="mbr-text mbr-fonts-style align-left display-4">Custom Design<br>Common Integrations<br>eCommence<br>Planned Enhancements<br>Unlimited Bandwidth
                                 <br>24/7 Support<br></p>
                             <div class="align-left mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="websites.html#forms02-g">PURCHASE</a></div>
                         </div>
@@ -157,11 +155,11 @@
                     <div class="card col-12 col-md-8 col-lg-4">
                         <div class="card-img">
                             <h4 class="price align-right mbr-fonts-style display-1">
-                                $200</h4>
+                                $250</h4>
                             <p class="price-text align-right mbr-regular mbr-fonts-style pt-2 align-left display-4">PER YEAR</p>
                         </div>
                         <div class="card-box">
-                            <h4 class="card-title align-left mbr-regular mbr-fonts-style display-7"><strong>Basic</strong><br>We Think Ahead</h4>
+                            <h4 class="card-title align-left mbr-regular mbr-fonts-style display-5"><strong>Basic</strong><br>Simple Visual</h4>
                             <p class="mbr-text mbr-fonts-style align-left display-4">One Page
 <br>Secure Hosting
 <br>Links: Email, Phone
@@ -178,10 +176,8 @@
                             <p class="price-text mbr-fonts-style pt-2 align-right mbr-regular display-4">PER YEAR</p>
                         </div>
                         <div class="card-box">
-                            <h4 class="card-title align-left mbr-regular mbr-fonts-style display-7"><strong>Business</strong><br><strong> </strong>
-                                Special Offer
-                            </h4>
-                            <p class="mbr-text mbr-fonts-style align-left display-4">1emplate design
+                            <h4 class="card-title align-left mbr-regular mbr-fonts-style display-5"><strong>Business</strong><br>Smart Digital</h4>
+                            <p class="mbr-text mbr-fonts-style align-left display-4">Template design
 <br>Upto 20 pages
 <br>Links: Email, Phone 
 <br>Social Media
@@ -194,12 +190,12 @@
                     <div class="card col-12 col-md-8 col-lg-4">
                         <div class="card-img">
                             <h4 class="price align-right mbr-fonts-style display-1">
-                                $5k</h4>
+                                $20k</h4>
                             <p class="price-text mbr-fonts-style pt-2 align-right mbr-regular display-4">PER YEAR</p>
                         </div>
                         <div class="card-box">
-                            <h4 class="card-title align-left mbr-regular mbr-fonts-style display-7"><strong>
-                                    Enterprise</strong><br>Our Best Solution</h4>
+                            <h4 class="card-title align-left mbr-regular mbr-fonts-style display-5"><strong>
+                                    Enterprise</strong><br>Global Grade</h4>
                             <p class="mbr-text mbr-fonts-style align-left display-4">Custom Template
 <br>Links: Email, Phone 
 <br>Social Media <br>eCommence
@@ -212,12 +208,12 @@ Integrations <br>Unlimited Bandwidth
                 </div>
             </div>
             <div class="wrap">
-                <img src="assets/images/154.svg" alt="" class="image-1 animated-elements1">
-                <img src="assets/images/255.svg" alt="" class="image-2 animated-elements2">
-                <img src="assets/images/356.svg" alt="" class="image-3 animated-elements3">
-                <img src="assets/images/457.svg" alt="" class="image-4 animated-elements4">
-                <img src="assets/images/558.svg" alt="" class="image-5 animated-elements5">
-                <img src="assets/images/659.svg" alt="" class="image-6 animated-elements6">
+                <img src="assets/images/10.svg" alt="" class="image-1 animated-elements1">
+                <img src="assets/images/21.svg" alt="" class="image-2 animated-elements2">
+                <img src="assets/images/32.svg" alt="" class="image-3 animated-elements3">
+                <img src="assets/images/43.svg" alt="" class="image-4 animated-elements4">
+                <img src="assets/images/54.svg" alt="" class="image-5 animated-elements5">
+                <img src="assets/images/65.svg" alt="" class="image-6 animated-elements6">
             </div>
         </div>
 
@@ -247,7 +243,7 @@ Integrations <br>Unlimited Bandwidth
                 </div>
             </div>
             <div class="col-lg-6 my-auto pb-4 mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="e2bhJvArbP3yZtUlHcndpFL6UJf0LnyKJLoMPSZeOX/IzMxNEO7hksyIiMDnpEpbQ6Oh8NFbwBsboFZhShx4/CxpwwZYicWMxXu55VADhwj+U6fGApsm2IYaMBKoonbq.zOxKhX8juFwwY9k85yIHivBNMgjZJEKhJxDy7Nfc8HJHqsDbWO2+l1BYZeZCRGvzP0rKYxjz9x2zOg+ZjpYmwPSuktzVMHd+WnsRYXLShbOLdtXUVCxe793OTEvfWqWr">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="20O8cIJuANEh82RkHuQ4n1tgLqy26VdULgK4hQmSyF9UtvoSlMppISR7LsN3cTClhJ3gs+pt2Gz831Ftf8aEWbCr/EJrujs9yCe+42Yy8XYHzG7H38CzbrQtdxyCzCqC.AuFjezDjUzfGKLs8rdUPcyV2Z213ejFS7HxltWbZxPC7jSQullKySkVYGVa+++EzUpqvg5dz5s4cISEr//T6qSKwhRBqi061JCqUcXWn+kQDV8TyEKJn1qA5iFFiQC8Q">
                     <div class="form-row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
