create github pages

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-secondary display-5" href="websites.html" aria-expanded="false">
-                            #Websites</a></li><li class="nav-item"><a class="nav-link link text-secondary display-5" href="marketing.html" aria-expanded="false">
-                            #Marketing</a></li><li class="nav-item"><a class="nav-link link text-secondary display-5" href="social.html" aria-expanded="false">
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-primary display-5" href="websites.html" aria-expanded="false">
+                            #Websites</a></li><li class="nav-item"><a class="nav-link link text-primary display-5" href="marketing.html" aria-expanded="false">
+                            #Marketing</a></li><li class="nav-item"><a class="nav-link link text-primary display-5" href="social.html" aria-expanded="false">
                             #Social</a></li></ul>
                 
                 
@@ -135,12 +135,12 @@
             </div>
             <div class="col-lg-3 col-md-12 align-center">
                 <div class="wrap">
-                    <img src="assets/images/10.svg" alt="" class="image-1 animated-elements1">
-                    <img src="assets/images/21.svg" alt="" class="image-2 animated-elements2">
-                    <img src="assets/images/32.svg" alt="" class="image-3 animated-elements3">
-                    <img src="assets/images/43.svg" alt="" class="image-4 animated-elements4">
-                    <img src="assets/images/54.svg" alt="" class="image-5 animated-elements5">
-                    <img src="assets/images/65.svg" alt="" class="image-6 animated-elements6">
+                    <img src="assets/images/118.svg" alt="" class="image-1 animated-elements1">
+                    <img src="assets/images/219.svg" alt="" class="image-2 animated-elements2">
+                    <img src="assets/images/320.svg" alt="" class="image-3 animated-elements3">
+                    <img src="assets/images/421.svg" alt="" class="image-4 animated-elements4">
+                    <img src="assets/images/522.svg" alt="" class="image-5 animated-elements5">
+                    <img src="assets/images/623.svg" alt="" class="image-6 animated-elements6">
                 </div>
             </div>
         </div>
@@ -285,12 +285,12 @@
             </div>
         </div>
         <div class="wrap">
-            <img src="assets/images/10.svg" alt="" class="image-1 animated-elements1">
-            <img src="assets/images/21.svg" alt="" class="image-2 animated-elements2">
-            <img src="assets/images/32.svg" alt="" class="image-3 animated-elements3">
-            <img src="assets/images/43.svg" alt="" class="image-4 animated-elements4">
-            <img src="assets/images/54.svg" alt="" class="image-5 animated-elements5">
-            <img src="assets/images/65.svg" alt="" class="image-6 animated-elements6">
+            <img src="assets/images/118.svg" alt="" class="image-1 animated-elements1">
+            <img src="assets/images/219.svg" alt="" class="image-2 animated-elements2">
+            <img src="assets/images/320.svg" alt="" class="image-3 animated-elements3">
+            <img src="assets/images/421.svg" alt="" class="image-4 animated-elements4">
+            <img src="assets/images/522.svg" alt="" class="image-5 animated-elements5">
+            <img src="assets/images/623.svg" alt="" class="image-6 animated-elements6">
         </div>
     </div>
 </section>
@@ -317,7 +317,7 @@
                 </div>
             </div>
             <div class="col-lg-6 my-auto pb-4 mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="COKpJGswhq/tMs63axDIWm6raULdk3PHklDaprSbsj/cR4A2xxpfWLbtJMRnzIWfLbUg8SoOcVGgBYjf1gh/9AZ5fws6PD0gBN2YN13HY4SNgCucWtkBWTL/olZ580N0.eQxFl9QMr4I7OwhoEaII5RcRYbapsI4hO7LmOzg/izNX5P2i8C7t5x9khWw1sQt0nDlSjPG7ed0PBLzNWO/RHUZYlpjhvG/qI1l4m8fOI0j1FV4ys2JpuN67KgYzT8yu">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="eI9RN5dqRjkiPidJenNEwmwtOovEIbuL0C1qC41EAIzfKJHiTchTnnnimJ4KosJ4czKDnFkfTy43jD/8YzRYHtmF8YmQAPdJY37FfaNAVRtrQ5eGik0vudI3ofCS+6h+.Mn9vhgjcSIi87McvWIseEiqxYfo0+vzBSYiJmn81IhFPrIjWh9DOK0Js3tVjNa91ToM2i8YqmACVlqee2hWhz0VafVtdMsNoHvwxx0defOVz3F0C1jkJYYzzMPkenJef">
                     <div class="form-row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -355,10 +355,10 @@
     <div class="container">
         <div class="media-container-row">
             <div class="col-md-6 map1">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:ChIJPXNH22yWMioR0FXfNbXwBAM" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJPXNH22yWMioR0FXfNbXwBAM" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6 map2">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:ChIJTw5JI2wFdkgR6lLDgDYDaAI" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJTw5JI2wFdkgR6lLDgDYDaAI" allowfullscreen=""></iframe></div>
             </div>
         </div>
     </div>
